--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top; /* centralizar a imagem */
+            background-position: center top; centralizar a imagem 
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +33,13 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea nemo accusantium magni dolor earum sequi rerum fugit nisi, doloribus ullam quos hic laboriosam aliquid aliquam, natus explicabo dolorem possimus eveniet.</p>
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui, beatae sint molestiae accusantium officia asperiores labore fugit in, corporis odio illo dolorem perspiciatis maxime quidem unde nostrum iure at?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui nisi distinctio laboriosam quae repellat labore, harum officia aperiam nulla. Quisquam iusto error perspiciatis laborum dolorum qui quo doloremque provident?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nulla facere eaque alias earum repellendus, necessitatibus, repudiandae facilis nobis minima maxime quos veritatis temporibus fugit dolore provident, nemo magni deleniti!
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi fuga eligendi nesciunt dignissimos magni provident pariatur illum praesentium id, temporibus, consequuntur tenetur quibusdam adipisci nisi ad cupiditate, reiciendis vel quia.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quas quis. Iusto iure, accusamus placeat quasi eum mollitia atque excepturi molestias hic impedit suscipit explicabo praesentium non nobis quaerat libero!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, commodi! Esse tempore, expedita rem possimus exercitationem aut est natus necessitatibus cumque nam facere. Facilis nihil perferendis asperiores iusto corporis. Vitae.</p>
     </main>
 </body>
 </html>
