--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,25 +11,27 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
-        tr.linha {
-            background-color: rgb(192, 200, 202);
-        }
-        td.dado {
-            color: rgb(255, 0, 0);
-        }
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /* horizontal align */
+            vertical-align: middle; /* alinhamento vertical */
+        }
+
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
 <body>
+          <!-- tr*9>td*6 = criacao de rows+datas rapido-->
     <h1>Tabela teste</h1>
     <table>
-        <tr class="linha"> <!-- Primeira linha -->
+        <tr> <!-- Primeira linha -->
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
@@ -37,12 +39,12 @@
         <tr> <!-- Segunda linha -->
             <td class="dado">A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
-        <tr class="linha"> <!-- Terceira linha -->
+        <tr> <!-- Terceira linha -->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- Quarta linha -->
             <td>A4</td>
@@ -51,8 +53,7 @@
         </tr>
     </table>
 <br>
-    <table>
-        <!-- tr*9>td*6 = criacao de rows+datas rapido-->
-    </table>
+
+
 </body>
 </html>
