corrections-last-updt

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -10,7 +10,7 @@
         }
 
         table {
-            width: 500px;
+            width: 350px;
             border-collapse: collapse;
         }
 
@@ -19,6 +19,13 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+        
         thead, tfoot {
             background-color: gray;
             color: white;
@@ -33,6 +40,7 @@
     <h1>Uso de tabelas grandes</h1>
     <!-- 
         table
+            CAPTION
             thead
                 tr/td/th
             tbody
@@ -41,10 +49,11 @@
                  tr/td/th
      -->
      <table>
+        <caption>População das UF</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
 
@@ -66,7 +75,7 @@
 
         <tfoot>
                 <tr>
-                    <th>Total de Habitantes</th>
+                    <th scope="row">Total de Habitantes</th>
                     <td class="num"><strong>84.352.783</strong></td>
                 </tr>
         </tfoot>
